--- a/backend/templates/radio/track_list.html
+++ b/backend/templates/radio/track_list.html
@@ -36,8 +36,8 @@
     var playlist = null;
     var playlist_data = {};
 
-    var protocol = 'http';
-    var domain = '127.0.0.1:8080';
+    var protocol = '{{http_protocol}}';
+    var domain = '{{domain_url}}';
 
     var interval_id = null;
 
